# ion

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: build_cmake.yml
include/ionlang/const/: const.h  const_name.h  grammar.h  notice.h  token_const.h
include/ionlang/construct/: argument_list.h  attribute.h  basic_block.h  block.h  cast.h  construct.h  expression.h  extern.h  function.h  function_body.h  global.h  identifier.h  import.h  method.h  module.h  prototype.h  statement.h  struct.h  struct_definition.h  type.h  value.h  variable_declaration.h
include/ionlang/construct/expr/: call_expr.h
include/ionlang/construct/expression/: binary_operation.h  call_expr.h  operation.h  unary_operation.h  variable_ref_expr.h
include/ionlang/construct/pseudo/: args.h  child_construct.h  construct_with_parent.h  error_marker.h  ref.h  resolvable.h
include/ionlang/construct/statement/: assignment_statement.h  block_wrapper_statement.h  call_statement.h  expr_wrapper_statement.h  if_statement.h  return_statement.h  variable_decl_statement.h  variable_declaration.h
include/ionlang/construct/type/: boolean_type.h  integer_type.h  struct_type.h  user_defined_type.h  void_type.h
include/ionlang/construct/value/: boolean.h  boolean_literal.h  char_literal.h  char_value.h  integer_literal.h  integer_value.h  string_literal.h  string_value.h
include/ionlang/diagnostics/: diagnostic.h
include/ionlang/error_handling/: code_backtrack.h  diagnostic.h  notice.h  notice_sentinel.h
include/ionlang/lexical/: classifier.h  lexer.h  token.h  token_kind.h
include/ionlang/misc/: helpers.h  ionir_emitted_entities.h  regex.h  statement_builder.h  static_init.h  type_factory.h  util.h
include/ionlang/passes/: pass.h
include/ionlang/passes/codegen/: ionir_codegen_pass.h
include/ionlang/passes/lowering/: ionir_lowering_pass.h
include/ionlang/passes/optimization/: dead_code_elimination_pass.h
include/ionlang/passes/semantic/: entry_point_check_pass.h  macro_expansion_pass.h  name_resolution_pass.h
include/ionlang/passes/type_system/: borrow_check_pass.h  type_check_pass.h
include/ionlang/syntax/: ast_result.h  parser.h  scope.h
include/ionlang/tracking/: context.h  local_var_descriptor.h
include/ionlang/type_system/: type_factory.h  type_util.h
src/: ionlang.cpp
src/const/: const.cpp  const_name.cpp  grammar.cpp  token_const.cpp  token_const_name.cpp  token_const_operator.cpp  token_const_symbol.cpp
src/construct/: attribute.cpp  basic_block.cpp  block.cpp  cast.cpp  construct.cpp  expression.cpp  extern.cpp  function.cpp  function_body.cpp  global.cpp  identifier.cpp  import.cpp  method.cpp  module.cpp  prototype.cpp  statement.cpp  struct.cpp  struct_definition.cpp  type.cpp  variable_declaration.cpp
src/construct/expression/: binary_operation.cpp  call_expr.cpp  operation.cpp  unary_operation.cpp  variable_ref_expr.cpp
src/construct/pseudo/: args.cpp  argument_list.cpp  error_marker.cpp
src/construct/statement/: assignment_statement.cpp  block_wrapper_statement.cpp  call_expr.cpp  call_statement.cpp  expr_wrapper_statement.cpp  if_statement.cpp  return_statement.cpp  variable_decl_statement.cpp  variable_declaration.cpp
src/construct/type/: boolean_type.cpp  integer_type.cpp  struct_type.cpp  user_defined_type.cpp  void_type.cpp
src/construct/value/: boolean_literal.cpp  boolean_value.cpp  char_literal.cpp  char_value.cpp  integer_literal.cpp  integer_value.cpp  string_literal.cpp  string_value.cpp
src/error_handling/: code_backtrack.cpp  notice_sentinel.cpp
src/lexical/: classifier.cpp  lexer.cpp  token.cpp  token_kind.cpp
src/misc/: ionir_emitted_entities.cpp  regex.cpp  statement_builder.cpp  static_init.cpp  type_factory.cpp  util.cpp
src/passes/: pass.cpp
src/passes/codegen/: ionir_codegen_pass.cpp
src/passes/lowering/: ionir_lowering_pass.cpp
src/passes/optimization/: dead_code_elimination_pass.cpp
src/passes/semantic/: entry_point_check_pass.cpp  macro_expansion_pass.cpp  name_resolution_pass.cpp
src/passes/type_system/: type_check_pass.cpp
src/syntax/: parser.cpp  parser_expr.cpp  parser_prototype.cpp  parser_pseudo.cpp  parser_statement.cpp  parser_type.cpp  parser_value.cpp
src/tracking/: context.cpp
src/type_system/: type_factory.cpp  type_util.cpp
test/: CMakeLists.txt  README.md  code_gen.cpp  lexer.cpp  name_resolution_pass.cpp  parser.cpp  pch.cpp  pch.h  stream.cpp  token.cpp
test/output/: statement_if.ll  variable_decl.ll
test/test_api/: bootstrap.cpp  bootstrap.h  compare.cpp  compare.h  const.h  filesystem.cpp  filesystem.h  util.cpp  util.h
